[package]
name = "mole"
version = "0.2.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "src/basis",
  "src/metropolis",
  "src/montecarlo",
  "src/operator",
  "src/wavefunction",
  "src/optimize",
]

[dependencies]
montecarlo = { path = "src/montecarlo" }
wavefunction = { path = "src/wavefunction" }
metropolis = { path = "src/metropolis" }
operator = { path = "src/operator" }
basis = { path = "src/basis" }


[dev-dependencies]
ndarray-linalg = { version = "0.10.0", features = ["intel-mkl"] }
rand = "0.5.0"
ndarray = "0.12.0"
