[package]
name = "mole"
version = "0.2.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "src/basis",
  "src/metropolis",
  "src/montecarlo",
  "src/operator",
  "src/wavefunction",
  "src/wavefunction_traits",
  "src/optimize",
  "src/vmc",
  "src/errors",
]

[dependencies]
montecarlo = { path = "src/montecarlo" }
wavefunction = { path = "src/wavefunction" }
wavefunction_traits = { path = "src/wavefunction_traits" }
metropolis = { path = "src/metropolis" }
operator = { path = "src/operator" }
basis = { path = "src/basis" }
optimize = { path = "src/optimize" }
vmc = { path = "src/vmc" }
errors = { path = "src/errors" }

[dev-dependencies]
ndarray-linalg = { version = "0.10.0", features = ["openblas"] }
rand = "0.5.0"
ndarray = "0.12.0"
itertools = "0.7"
gnuplot = "0.0.31"
