[package]
name = "mole"
version = "0.2.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "src/metropolis",
  "src/montecarlo",
  "src/operator",
  "src/wavefunction_traits",
  "src/optimize",
  "src/vmc",
  "src/errors",
  "src/util",
]

[dependencies]
montecarlo = { path = "src/montecarlo" }
wavefunction_traits = { path = "src/wavefunction_traits" }
metropolis = { path = "src/metropolis" }
operator = { path = "src/operator" }
optimize = { path = "src/optimize" }
vmc = { path = "src/vmc" }
errors = { path = "src/errors" }
util = { path = "src/util" }

[dev-dependencies]
ndarray-linalg = { version = "0.10.0", features = ["intel-mkl"] }
rand = "0.5.0"
ndarray = "0.12.0"
itertools = "0.7"
gnuplot = "0.0.31"
rayon = "1.1.0"
