[package]
name = "dmc"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavefunction_traits = { path = "../wavefunction_traits" }
operator = { path = "../operator" }
metropolis = { path = "../metropolis" }
ndarray = "0.12.0"
rand = "0.5.0"
ndarray-rand = "0.8.0"