[package]
name = "montecarlo"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[dependencies]
wavefunction_traits = { path = "../wavefunction_traits" }
metropolis = { path = "../metropolis" }
operator = { path = "../operator" }
errors = { path = "../errors" }
rand = "0.5.0"
ndarray = "0.12.0"
ndarray-linalg = "0.10.0"
ndarray-rand = "0.8.0"
num-traits = "0.2"
itertools = "0.7"

[dev-dependencies]
basis = {path = "../basis" }
wavefunction = { path = "../wavefunction" }