[package]
name = "operator"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[dependencies]
wavefunction_traits = { path = "../wavefunction_traits" }
errors = { path = "../errors" }
ndarray = "0.12.0"
ndarray-linalg = "0.10.0"

[dev-dependencies]
proptest = "0.9.4"
basis = { path = "../basis" }

