[package]
name = "optimize"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = { path = "../operator" }
errors = { path = "../errors" }
ndarray = "0.12.0"
ndarray-linalg = "0.10.0"
itertools = "0.7"