[package]
name = "vmc"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1.0"
ndarray-linalg = "0.10.0"
rand = "0.5.0"
ndarray = "0.12.0"
operator = { path = "../operator" }
optimize = { path = "../optimize" }
wavefunction_traits = { path = "../wavefunction_traits" }
montecarlo = { path = "../montecarlo" }
metropolis = { path = "../metropolis" }
errors = { path = "../errors" }
