[package]
name = "wavefunction"
version = "0.1.0"
authors = ["Jesse van Rhijn <jesse.v.rhijn@gmail.com>"]
edition = "2018"

[dependencies]
basis = { path = "../basis" }
optimize = { path = "../optimize" }
wavefunction_traits = { path = "../wavefunction_traits" }
errors = { path = "../errors" }
ndarray = "0.12.0"
ndarray-linalg = "0.10.0"
itertools = "0.7"

[dev-dependencies]
ndarray-rand = "0.8.0"
rand = "0.5.0"
